--- a/navbar.html
+++ b/navbar.html
@@ -13,3 +13,23 @@
         </div>
     </div>
 </nav>
+
+<div class="footer">
+    &copy; Copyright 2018.
+        
+</div>
+
+
+<div id='auth-nav' class='navbar-nav'></div>
+
+
+<script>
+    const isAuthenticated = localStorage.getItem('isAuthenticated');
+    const logoutElement = '<a class="nav-item nav-link"
+   onClick="logout()">Logout</a>';
+    const loginElement = '<a class="nav-item nav-link"
+   href="/login">Login</a>';
+    isAuthenticated
+    ? $('#auth-nav').append(logoutElement)
+    : $('#auth-nav').append(loginElement);
+</script>
